# TyCode

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  NPM.md  PKGBUILD  README.md  index.js  package.json  run.sh  tycode.spec
.github/workflows/: npm-release.yml
docs/superpowers/plans/: 2026-05-10-claude-code-parity.md
docs/superpowers/specs/: 2026-05-10-claude-code-parity-design.md
scripts/: build-release.sh  install.js  uninstall.js
src/: agent.rs  config.rs  main.rs
src/provider/: anthropic.rs  dev.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/tools/: file_ops.rs  http_ops.rs  mod.rs  process.rs  search.rs  shell.rs  system.rs  todo.rs  web.rs
src/tui/: app.rs  input.rs  markdown.rs  mod.rs  ui.rs
